objects/SessionData__c/SessionData__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Session Data</description>
    <label>Session Data</label>
</CustomObject>