objects/SessionData__c/fields/current_action__c.field-meta.xml
<CustomField>
    <fullName>current_action__c</fullName>
    <label>current_action</label>
    <length>40</length>
    <type>Text</type>
</CustomField>