objects/SessionData__c/fields/display_language__c.field-meta.xml
<CustomField>
    <fullName>display_language__c</fullName>
    <label>display_language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>