objects/SessionData__c/fields/Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Id_Number__c</fullName>
    <label>Id Number</label>
    <length>36</length>
    <type>Text</type>
</CustomField>