objects/SessionData__c/fields/is_current_user__c.field-meta.xml
<CustomField>
    <fullName>is_current_user__c</fullName>
    <description>indicate if current user and session user is the same person</description>
    <label>is current user</label>
    <length>1</length>
    <type>Text</type>
</CustomField>