objects/SessionData__c/fields/is_mobile__c.field-meta.xml
<CustomField>
    <fullName>is_mobile__c</fullName>
    <label>is_mobile</label>
    <length>1</length>
    <type>Text</type>
</CustomField>