objects/SessionData__c/fields/last_modified__c.field-meta.xml
<CustomField>
    <fullName>last_modified__c</fullName>
    <label>last modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>