objects/SessionData__c/fields/last_modified_time__c.field-meta.xml
<CustomField>
    <fullName>last_modified_time__c</fullName>
    <label>last modified time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>