objects/SessionData__c/fields/otp__c.field-meta.xml
<CustomField>
    <fullName>otp__c</fullName>
    <label>otp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>