objects/SessionData__c/fields/registration_data__c.field-meta.xml
<CustomField>
    <fullName>registration_data__c</fullName>
    <label>registration data</label>
    <length>20</length>
    <type>Text</type>
</CustomField>