objects/SessionData__c/fields/rest_access_token__c.field-meta.xml
<CustomField>
    <fullName>rest_access_token__c</fullName>
    <label>rest_access_token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>