objects/SessionData__c/fields/user_id__c.field-meta.xml
<CustomField>
    <fullName>user_id__c</fullName>
    <label>user_id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>